Cleaned up card styles and fixed service facts content alignment

--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -1,8 +1,21 @@
+/* Hero Styles */
+
 /* Card Styles */
 .card{
     align-content: space-around;
     background: #f8f8f8;
     border: 1px solid black;
+    height: 200px;
     padding: 10px;
     width: 430px;
+}
+
+/* Service Facts Styles */
+#service-facts{
+    margin: 50px 0;
+}
+
+#service-facts ul{
+    list-style-type: disc;
+    margin: 0 0 0 20px;
 }
